# mcp-oci-registry

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  __init__.py  docker-compose.yml  prompts.py  pyproject.toml  registry.py  requirements.txt  server.py  tools.py
.github/workflows/: python-publish.yml
tests/: conftest.py  test_integration_http.py  test_tools.py
